# ra-events-notifier

./: config_template.json  pyproject.toml
app/: app.py  database.py
