[tool.poetry]
name = "ra-events-notifier"
version = "0.1.0"
description = "Notifies people about new events on Resident Advisor"
authors = ["Šarūnas Nejus <saras.nejuz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
sqlalchemy = "^1.3.17"
sqlalchemy-utils = "^0.36.5"
google-api-python-client = "^1.8.3"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
backoff = "^1.10.0"
urllib3 = "^1.25.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
